Add copyright footer

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,5 +1,10 @@
 <div class="container">
-<h1>Angular2: Todo App</h1>
-<h4>A simple todo application built with Angular2.</h4>
-<todo-app></todo-app>
+  <div class="intro">
+    <h1>ToDo</h1>
+    <p class="lead">A simple todo application built with Angular2.</p>
+  </div>
+  <todo-app></todo-app>
 </div>
+<footer>
+  <small>Copyright &copy; 2016, Maiyaporn Phanich</small>
+</footer>
